--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 815416477180100679
 textchannel = 815416083111477268
 ladderchannel = 
 jungsanchannel = 
